--- a/codeGenerator/Qrcode/index.html
+++ b/codeGenerator/Qrcode/index.html
@@ -17,12 +17,19 @@
         <img src="./assets/images/qr.png">
     </div>
     <div class="textparagraph">
-    <p id="contentTitle"><strong>improve your front-end skills by building projects<strong></p>
-    <p id="contentScan">scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+
+        <p id="contentTitle">
+            <strong>
+                improve your front-end 
+                skills by building projects 
+            <strong></p>
+        <p id="contentScan">
+                scan the QR code to 
+                visit Frontend Mentor and 
+                take your coding skills to the
+                 next level </p>
     </div>
+    
 </div>
-
-
-
 </body>
 </html>
